--- a/style.css/about.css
+++ b/style.css/about.css
@@ -6,18 +6,19 @@
 header{
     background-color:rgb(117, 114, 109);
     width:cover;
-    height:40px;
+    height:20px;
     border-radius:10px;
 }
 .nav ul{
     display:flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap:30px;
     list-style-type: none;
 }
 .nav a{
     margin:30px;
     padding-top: 50px;
-    color:rgb(12, 0, 0);
+    color:white;
 }
 section h1{
     padding-top: 30px;
