--- a/style.css/home.css
+++ b/style.css/home.css
@@ -6,14 +6,17 @@
 .brand h1{
     color:rgb(233, 235, 236);
     font-size: 50px;
+    margin-top:30px;
 }
 .brand h3{
+    margin-top: 30px;
     color:rgb(233, 235, 236);
     font-size: 20px;
     font-family:Dancing Script ;
 }
 /*styling button*/
 .brand button{
+    margin-top:80px;
     align-items: center;
     justify-content:center;
     border: none;
