--- a/style.css/about.css
+++ b/style.css/about.css
@@ -4,21 +4,27 @@
     padding:0;
 }
 header{
-    background-color:rgb(117, 114, 109);
     width:cover;
     height:20px;
     border-radius:10px;
+    position: sticky;
+    top:0;
+    left:0;
+    z-index:1000;
 }
 .nav ul{
     display:flex;
-    justify-content: center;
+    justify-content: flex-end;
     gap:30px;
     list-style-type: none;
+}
+.nav a:hover{
+  color:rgb(243, 173, 208);
 }
 .nav a{
     margin:30px;
     padding-top: 50px;
-    color:white;
+    color:rgb(43, 5, 5);
 }
 section h1{
     padding-top: 30px;
@@ -81,3 +87,4 @@ tr:hover {
   footer .social-icons a:hover {
     color: #b76e79;
   }
+  
