--- a/style.css/contact.css
+++ b/style.css/contact.css
@@ -5,7 +5,6 @@
 }
 /*styling header*/
 header{ 
-    background-color: rgb(117, 114, 109);
     width:cover;
     height:20px;
     border-radius:10px;
@@ -19,12 +18,16 @@ header{
 .nav ul{
     list-style-type: none;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     gap:50px;
-
+    margin:50px;
 }
 .nav a{
-    color:white;
+    color:black;
+}
+.nav a:hover{
+    color:rgb(243, 173, 208);
+
 }
 footer {
     margin-top: 50px;
@@ -57,7 +60,7 @@ footer {
   footer .social-icons a:hover {
     color: #b76e79;
   }
-  2{
+  {
     color:rgb(4, 52, 36);
     margin-top: 20px;
     text-align:center;
