--- a/style.css/home.css
+++ b/style.css/home.css
@@ -118,4 +118,60 @@ footer {
   footer .social-icons a:hover {
     color: #b76e79;
   }
+.image{
+    display:flex;
+    gap: 30px;
+    justify-content:space-evenly;
+    margin-left:50px;
+    margin-right:50px;
+}
+/*responsiveness*/
+@media (max-width: 768px) {
+  .nav {
+    flex-direction: column;
+    align-items: center;
+  }
 
+  .nav ul {
+    justify-content: center;
+    margin-bottom: 10px;
+  }
+
+  .brand h1 {
+    font-size: 24px;
+  }
+
+  .brand h3 {
+    font-size: 14px;
+  }
+}
+
+/* Mobile */
+@media (max-width: 480px) {
+  header p {
+    font-size: 12px;
+  }
+
+  .nav ul {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .nav div {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+
+  .nav input {
+    width: 100%;
+  }
+
+  .brand h1 {
+    font-size: 20px;
+  }
+
+  .image img {
+    max-width: 100%;
+  }
+}
