--- a/style.css/product.css
+++ b/style.css/product.css
@@ -5,7 +5,6 @@
 }
 /*styling header*/
 header{ 
-    background-color: rgb(117, 114, 109);
     width:cover;
     height:20px;
     border-radius:10px;
@@ -19,12 +18,17 @@ header{
 .nav ul{
     list-style-type: none;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     gap:50px;
+    margin-right:100px;
+
 
 }
 .nav a{
-    color:white;
+    color:rgb(46, 5, 5);
+}
+.nav a:hover{
+  color:rgb(243, 173, 208);
 }
 footer {
     margin-top: 50px;
@@ -61,7 +65,7 @@ footer {
     margin-left: 20px;
   }
   .pic img{
-    width:100px;
+    width:200px;
     margin:5px;
     background-color: bisque;
 
@@ -71,10 +75,13 @@ footer {
     justify-content: space-between;
     margin:30px;
     margin-left: 50px;
-    margin-right: 150px;
+    margin-right: 50px;
+      align-items: center;
+
   }
   .dis img{
-    align-items: center
+    align-items: center;
+    border-radius: 30px;
 
   }
   .dis p{
@@ -85,4 +92,8 @@ footer {
 }
 .dis button:hover{
   color:white;
+}
+.dis{
+  border-radius: 20px;
+  background-color: rgb(237, 243, 186);
 }
