--- a/style.css/home.css
+++ b/style.css/home.css
@@ -74,6 +74,11 @@ header{
     background-size: cover;
     background-position: center;
     border-radius: 20px;
+    width:cover;
+    position: sticky;
+    top:0;
+    left:0;
+    z-index:1000;
 }
 /*styling section*/
 .image img{
